--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,35 +1,26 @@
-# Nome da Actions:  
 name: Snake Game
 
-# Controlador do tempo que sera feito a atualização dos arquivos.
 on:
   schedule:
-      # Será atualizado a cada 5 horas.
     - cron: "0 */5 * * *"
-
-# Permite executar na na lista de Actions (utilizado para testes de build).
   workflow_dispatch:
 
-# Regras
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-    # Repositorio que será utilizado para gerar os arquivos.
-      - uses: Platane/snk@master
+      - name: Generate files
         id: snake-gif
+        uses: Platane/snk@master
         with:
-          github_user_name: joseweverton #Seu usuario
+          github_user_name: joseweverton
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - run: git status
 
-      # Para as atualizações.
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
@@ -39,8 +30,13 @@ jobs:
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set output values
+        run: |
+          echo "snake-gif::gif_path=dist/github-contribution-grid-snake.gif" >> $GITHUB_ENV
+          echo "snake-gif::svg_path=dist/github-contribution-grid-snake.svg" >> $GITHUB_ENV
+
