--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: mishmanners
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+      - name: Install Platane/snk
+        uses: Platane/snk@v0.0.9
+
+      - run: |
+          snk --user=joseweverton --out-gif=dist/github-contribution-grid-snake.gif --out-svg=dist/github-contribution-grid-snake.svg
         env:
-          GIF_OUT_PATH: dist/github-contribution-grid-snake.gif
-          SVG_OUT_PATH: dist/github-contribution-grid-snake.svg
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: git status
 
@@ -31,9 +29,9 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
         env:
-          GH_PAGES_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
