--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: Generate Snake
 
 on:
   schedule:
-    # Executa a ação a cada 6 horas
     - cron: "0 */6 * * *"
   workflow_dispatch:
 
@@ -11,19 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Generate the snake
-        id: snake-gif
-        uses: Platane/snk@master
-        with:
-          github_user_name: joseweverton
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+      - name: Generate contributions graph
+        uses: jasonetco/contributions@v4
 
-      - name: Show build status
-        run: git status
+      - run: git status
 
       - name: Push changes
         uses: ad-m/github-push-action@master
@@ -32,10 +24,10 @@ jobs:
           branch: master
           force: true
 
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v3
+      - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
